syntax = "proto3";

package tenant.v1;

option go_package = "github.com/vantutran2k1/rwe/gen/go/tenant/v1;tenantv1";

message CreateTenantRequest {
  string name = 1;
  string region = 2;
}

message CreateTenantResponse {
  string name = 1;
  string slug = 2;
  string tier = 3;
  string region = 4;
  string status = 5;
}
